2011-05-04  Glenn Morris  <rgm@gnu.org>

	* calendar/diary-lib.el (diary-fancy-date-pattern): Do not use
	non-numbers for `year' etc pseudo-variables.  (Bug#8583)

2011-05-04  Teodor Zlatanov  <tzz@lifelogs.com>

	* net/gnutls.el (gnutls-negotiate): Use CL-style keyword arguments
	instead of positional arguments.  Allow :keylist and :crlfiles
	arguments.
	(open-gnutls-stream): Call it.

	* net/network-stream.el (network-stream-open-starttls): Adjust to
	call `gnutls-negotiate' with :process and :hostname arguments.

2011-05-04  Stefan Monnier  <monnier@iro.umontreal.ca>

	* minibuffer.el (completion--message): New function.
	(completion--do-completion, minibuffer-complete)
	(minibuffer-force-complete, minibuffer-complete-word): Use it.
	(completion--do-completion): Don't ignore completion-auto-help when in
	icomplete-mode.

	* whitespace.el (whitespace-trailing-regexp): Don't rely on the
	internal encoding (e.g. tibetan zero is not whitespace).
	(global-whitespace-mode): Prefer save-current-buffer.
	(whitespace-trailing-regexp): Remove useless save-match-data.
	(whitespace-empty-at-bob-regexp): Minor simplification.

2011-05-03  Chong Yidong  <cyd@stupidchicken.com>

	* emacs-lisp/autoload.el (generated-autoload-file): Doc fix (Bug#7989).

2011-05-03  Agustín Martín Domingo  <agustin.martin@hispalinux.es>

	* textmodes/ispell.el (ispell-add-per-file-word-list):
	Use `concat' to create string for insertion.

2011-05-03  Stefan Monnier  <monnier@iro.umontreal.ca>

	* textmodes/bibtex.el (bibtex-fill-field-bounds, bibtex-fill-entry):
	Avoid open-line which runs post-self-insert-hook.
	(bibtex-fill-entry): Remove unused `end' var.

2011-05-03  Dirk Ullrich  <dirk.ullrich@googlemail.com>  (tiny change)

	* textmodes/ispell.el (ispell-add-per-file-word-list):
	Protect against `nil' value of `comment-start' (Bug#8579).

2011-05-03  Leo Liu  <sdl.web@gmail.com>

	* isearch.el (isearch-yank-pop): New command.
	(isearch-mode-map): Bind it to `M-y'.